# cpp_procs

./: .gitignore  .gitmodules
doc/logging/: log4cpp.txt
include/logutils/: log4cpputils.hpp
include/str_utils/: sconv.hpp
include/threads/: spinning_barrier.hpp
src/httputils/: httputils.cpp
src/threads/: spinning_barrier.cpp
test/: CMakeLists.txt  http_header.cpp
threads/: spinning_barrier.cpp
